--- a/face-detection/Dockerfile
+++ b/face-detection/Dockerfile
@@ -101,4 +101,4 @@ WORKDIR /srv/video
 
 COPY haarcascade_frontalface_default.xml face-detection-video.py /srv/video
 
-ENTRYPOINT ["python3 /srv/video/face-detection-video.py --device ${VIDEO_INDEX}"]
+#ENTRYPOINT ["python3 /srv/video/face-detection-video.py --device ${VIDEO_INDEX}"]
