--- a/create-dataset/Dockerfile
+++ b/create-dataset/Dockerfile
@@ -4,7 +4,7 @@ LABEL version=1.0
 LABEL maintainer="jadebustos@gmail.com"
 #LABEL name=
 #LABEL description=
-#LABEL url=
+LABEL url="https://quay.io/repository/rhte_2019/face-dataset"
 
 ENV VIDEO_INDEX=0
 
